# diplom_1

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  seed_demo.py
bench/: _mixed_109.jsonl  _mixed_cli.jsonl  audit_gold.jsonl  benchmark.jsonl  benchmark_big.jsonl  benchmark_cli.jsonl
docs/: how-auto-wiring-works.md  model-comparison.html  model-comparison.md
evals/: run_evals.py  validate_dataset.py
evals/audit/: __init__.py  analyze.py
images/: README.md
src/eva_agent/: cli.py  graph.py  metrics.py  settings.py  state.py  tracing.py
src/eva_agent/dialog/: __init__.py  memory_agent.py  models.py  store.py
src/eva_agent/domain/: checklist.py  confidence.py  domain_map.json  entities.py  entity_map.py  frame.py  frame_normalize.py  frame_validate.py  plan.py  relations.py  slice.py
src/eva_agent/llm/: base.py  cli_agent.py  config.py  observability.py  ollama_local.py  openrouter.py  smoke.py
src/eva_agent/mcp_docs/: __init__.py  documents.py  schemas.py  security.py  server.py
src/eva_agent/mock/: data.py
src/eva_agent/nlu/: __init__.py  fewshot.py  gazetteer.py  preprocess.py  ru.py
src/eva_agent/nodes/: agents.py  dialog_nodes.py  domain_nodes.py  frame_parser.py  guards.py  nlu.py
src/eva_agent/planner/: bind.py  build.py  catalog.py  compile.py  coverage.py  execute.py  filters.py  protocols.py  trace.py  validate.py
src/eva_agent/security/: injection_detector.py  input_filter.py  output_filter.py  ru_pii.py  spotlight.py  verdict.py
tests/: conftest.py  test_cli_agent.py  test_dialog_memory.py  test_domain_map.py  test_domain_selector.py  test_entity_map.py  test_entity_ref.py  test_eval_metrics.py  test_fewshot.py  test_frame_confidence.py  test_frame_parser.py  test_frame_validate.py  test_injection_detector.py  test_input_filter.py  test_input_guard.py  test_llm_schema.py  test_mcp_docs.py  test_mock.py  test_nlu_preprocess.py  test_output_filter.py  test_planner_bind.py  test_planner_build.py  test_planner_catalog.py  test_planner_execute.py  test_planner_integration.py  test_planner_protocols.py  test_protocol_compiler.py  test_selector.py  test_supervisor_routing.py  test_tracing.py
ui/: app.py
(+12 files in other folders)
