[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-agent-lab"
version = "0.1.0"
description = "Учебный supervisor multi-agent (LangGraph) с защитным слоем - помощник по рекламному праву (38-ФЗ)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "mcp>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eva_agent*"]

[tool.setuptools.package-data]
"eva_agent.mcp_docs" = ["fixtures/documents.json", "fixtures/blobs/*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001/002/003 - ambiguous-unicode: проект намеренно билингвальный (русские докстроки/комменты).
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true   # тяжелые ML-зависимости без стабов
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
